--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <i class="fab fa-diaspora"></i>
         <a href="#">Songhyun</a>
     </div>
-    
       <ul class="navbar__menu">
           <li class="navbar__menu__item">Home</li>
           <li class="navbar__menu__item">About</li>
@@ -30,7 +29,13 @@
           <li class="navbar__menu__item">Testimonials</li>
           <li class="navbar__menu__item">Contact</li>
       </ul>
-
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profile.jpg" alt="Songhyun's profile photo" class="home__avatar">
+        <h1 class="home__title">I'm developer</h1>
+        <h2 class="home__description">소프트웨어 엔지니어</h2>
+        <button class="home__contact">CONTACT ME</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
