--- a/index.html
+++ b/index.html
@@ -155,11 +155,50 @@
     </section>
     <!-- Work -->
     <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn">Front-end<span class="category__count">3</span></button>
+            <button class="category__btn">Bakc-end<span class="category__count">3</span></button>
+        </div>
 
+        <div class="work__projects">
+            <a href="https://github.com/dst406/BIT-Final" 
+            class="project"
+            target="blank">
+            <img src="imgs/projects/final.PNG" alt="Final" class="project__img">
+            <div class="porject__description">
+                <h3>Final Project</h3>
+                <span>Varchardemy</span>
+            </div>
+        </a>
+        </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
+            </div>
+            <div class="testimonial__speech-bubble">
+                <p>그는 최고에요!</p>
+            </div>
+        </div>
+        
+    </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contatct__email">dst406@naver.com</h2>
+        <div class="contatct__links">
+            <a href="https://github.com/dst406" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+
+        </div>
+    </section>
 </body>
 </html>
