--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <p>Paragraph</p>
     <!-- Navbar -->
-    <nav id="navbar"></nav>
+    <nav id="navbar">
     <div class="navbar__logo">
         <i class="fab fa-diaspora"></i>
         <a href="#">Songhyun</a>
     </div>
       <ul class="navbar__menu">
-          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item active">Home</li>
           <li class="navbar__menu__item">About</li>
           <li class="navbar__menu__item">Skills</li>
           <li class="navbar__menu__item">My work</li>
           <li class="navbar__menu__item">Testimonials</li>
           <li class="navbar__menu__item">Contact</li>
       </ul>
+    </nav>
     <!-- Home -->
     <section id="home">
         <img src="imgs/profile.jpg" alt="Songhyun's profile photo" class="home__avatar">
