--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="imgs/profile.jpg" alt="Songhyun's profile photo" class="home__avatar">
         <h1 class="home__title">I'm developer</h1>
         <h2 class="home__description">소프트웨어 엔지니어</h2>
-        <button class="home__contact">CONTACT ME</button>
+        <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
     <section id="about">
