--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/98bd2fbe2a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> 
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -155,7 +155,6 @@
             </div>
         </div>
         </div>
-        
     </section>
     <!-- Work -->
     <section id="work" class="section">
@@ -166,18 +165,16 @@
             <button class="category__btn">Front-end</button>
             <button class="category__btn">Bakc-end</button>
         </div>
-
         <div class="work__projects">
             <a href="https://github.com/dst406/BIT-Final" 
             class="project"
             target="blank">
             <img src="imgs/projects/final.PNG" alt="Final" class="project__img">
-            <div class="porject__description">
+            <div class="project__description">
                 <h3>Final Project</h3>
                 <span>Varchardemy</span>
             </div>
         </a>
-        
         </div>
     </section>
     <!-- Testimonials -->
