--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           <li class="navbar__menu__item">Testimonials</li>
           <li class="navbar__menu__item">Contact</li>
       </ul>
+      <!-- Toggle button -->
+      <button class="navbar__toggle-btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
     <!-- Home -->
     <section id="home">
@@ -158,7 +162,8 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
+        <div class="work__container">
+            <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
             <button class="category__btn active">All</button>
@@ -176,30 +181,35 @@
             </div>
         </a>
         </div>
+
+        </div>
+        
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
-        <h3>See what they say about me</h3>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
-                <div class="testimonial__speech-bubble">
-                    <p>그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
+        <div class="section__container">
+            <h1>Testimonials</h1>
+            <h3>See what they say about me</h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
+                    <div class="testimonial__speech-bubble">
+                        <p>그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
                         그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
                         그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                    </p>
+                     </p>
+                     </div>
                 </div>
+                    <div class="testimonial">
+                        <div class="testimonial__speech-bubble">
+                            <p>그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
+                            그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
+                            그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
+                            </p>
+                        </div>
+                        <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
+                    </div>
             </div>
-            <div class="testimonial">
-            <div class="testimonial__speech-bubble">
-                <p>그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                    그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                    그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                </p>
-            </div>
-            <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
-        </div>
         </div>
         
     </section>
