--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2>Skills & Attributes</h2>
         <p>
         관련학과를 다니면서 전반적인 소프트웨어 개발, 설계, 프로그래밍 언어등을 배워 소프트웨어 공학에 대한 기본적인 지식을 갖고있습니다.
-        코딩능력이 부족하다고 판단되어 학원에 등록하여 6개월간의 교육기간을 수료했습니다. 새로운 것을 배우는것에 관심이 있고, 끈기가 있어 쉽게 포기하지 않습니다.
+        코딩능력이 부족하다고 판단되어 학원에 등록하여 6개월간의 교육기간을 수료했습니다. 새로운 것을 배우는것에 관심이 있고, 끈기가 있고 꾸준합니다.
         여러 회사에서의 아르바이트 경험으로 회사의 구성원들과 잘 융화될 수 있습니다.
         </p>
         <div class="skillset">
@@ -105,35 +105,44 @@
                 <div class="skill">
                     <div class="skill__description">
                         <span>HTML</span>
-                        <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value" style="width: 99%">
-
+                        <div class="skill__value">
                         </div>
                     </div>
                     <div class="skill__description">
                         <span>JavaScript</span>
-                        <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value" style="width: 99%">
+                        <div class="skill__value">
                         </div>
                     </div>
                     <div class="skill__description">
                         <span>Java</span>
-                        <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value" style="width: 99%">
+                        <div class="skill__value">
                         </div>
                     </div>
                     <div class="skill__description">
                         <span>Spring</span>
-                        <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value" style="width: 99%">
+                        <div class="skill__value">
+                        </div>
+                    </div>
+                    <div class="skill__description">
+                        <span>MySQL</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value">
+                        </div>
+                    </div>
+                    <div class="skill__description">
+                        <span>Oracle DB</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value">
                         </div>
                     </div>
                 </div>
@@ -153,6 +162,15 @@
                         <li>
                             <sapn>Git</sapn>
                         </li>
+                        <li>
+                            <sapn>열정</sapn>
+                        </li>
+                        <li>
+                            <sapn>끈기</sapn>
+                        </li>
+                        <li>
+                            <sapn>소통</sapn>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -164,11 +182,6 @@
         <div class="work__container">
             <h1>My work</h1>
         <h3>Projects</h3>
-        <div class="work__categories">
-            <button class="category__btn active">All</button>
-            <button class="category__btn">Front-end</button>
-            <button class="category__btn">Bakc-end</button>
-        </div>
         <div class="work__projects">
             <a href="https://github.com/dst406/BIT-Final" 
             class="project"
@@ -193,17 +206,18 @@
                 <div class="testimonial">
                     <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
                     <div class="testimonial__speech-bubble">
-                        <p>그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                        그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                        그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                     </p>
+                        <p>
+                            책임감이 뛰어나 맡은일에 최선을 다하는 사람입니다. 다른 팀원들에게 피해가 가지 않도록 노력하는 사람이에요. 
+                            배려심이 뛰어나 같은 팀을 할때 굉장히 좋았습니다. 다음에 기회가 된다면 또 같이 프로젝트를 진행했으면 좋겠어요.
+                            <br>- 팀원 진보형 -
+                        </p>
                      </div>
                 </div>
                     <div class="testimonial">
                         <div class="testimonial__speech-bubble">
-                            <p>그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                            그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
-                            그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!그는 최고에요!
+                            <p>
+                                분위기를 유쾌하게 이끌어 갈줄 아는 사람입니다. 같이 팀이 이뤄 작업을 진행할때 항상 즐거웠어요. 같이 일하게 된다면
+                                분명 즐겁게 일할 수 있을 겁니다.<br> - 팀장 고재현 - 
                             </p>
                         </div>
                         <img src="imgs/testimonial/people1.jpg" alt="people1" class="testimonial__avata">
